<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">SmartAlarm</string>
    <string name="action_settings">Settings</string>
    <string name="applicationName">Smart Alarm</string>
    <string name="preference_settings">Setting</string>

    <string name="pref_back">Back</string>
    <string name="mathAlarm_buttonName">New Math Alarm</string>
    <string name="setFromHistory_buttonName">Set from history</string>
    <string name="false_answers_display_alarm_activity">If false answers more then 2 show new task.</string>
    <string name="displayAlarmActivity_bStopAlarm">Stop</string>
    <string name="displayAlarmActivity_bSnooze">Snooze</string>
    <string name="displayAlarmActivity_tvTaskHint">solve the equation to stop alarm</string>
    <string name="displayAlarmActivity_bStopAlarmAlertDialog">Your Answer?</string>

    <string name="number3Add">+ <xliff:g id="number3Add">%d</xliff:g></string>
    <string name="number3Subtract">- <xliff:g id="number3Subtract">%d</xliff:g></string>
    <string name="edHintGood_morning_sir">Good morning sir</string>


    <string name="tvSAFH_delete_all">Delete all</string>
    <string name="tvSAFH_delete_chosen_row">delete chosen row</string>


    <string name="tvMMA_customTime">hour:00 minute:00</string>
    <string name="bMMA_change_time">Change Time</string>
    <string name="tvMMA_defaultMusic">default: mechanic</string>
    <string name="bMMA_chooseMusic">Choose music</string>
    <string name="bMMA_change_message">Change message</string>
    <string name="tvMMA_defaultComplexity">default (Easy)</string>
    <string name="bMMA_changeComplexity">Change complexity</string>
    <string name="bMMA_defaultDeepSleepMusicStatus">off</string>
    <string name="bMMA_deep_sleep_music">deep Sleep music</string>

    <string name="VolumePreference_title">Alarm volume</string>
    <string name="PreferenceCategory_summary">Set the volume of alarms</string>
    <string name="PreferenceCategory_title">Sound</string>


    <string name="WA_progressStatus">Progress: <xliff:g id="iProgressBarStatus">%d</xliff:g>/<xliff:g id="getMax">%d</xliff:g></string>
    <string name="AN_snoozeContentText">Hello I am alarm</string>
    <string name="AN_snoozeContentTitle">SmartAlarm</string>
    <string name="AN_snoozeTicker">MathAlarm touch to snooze</string>
    <string name="AN_snoozeAction">snooze</string>
    <string name="AN_dismissContentTitle">SmartAlarm</string>
    <string name="AN_dismissActionText">dismiss</string>
    <string name="AN_dismissContentText">Alarm was set on <xliff:g id="alarmSetTime">%s</xliff:g></string>
    <string name="DAA_stopAlarmPositiveButtonText">try</string>
    <string name="DAA_stopAlarmNegativeButtonText">back</string>
    <string name="settingsPreviewTitle">Preview</string>
    <string name="settingsPreviewPostiveButtonText">Confirm</string>
    <string name="setttingsPreviewNegativeButtonText">Back</string>
    <string name="MMA_timeNotSetToastText">To create alarm please first set the alarm time</string>
    <string name="MMA_alertDialogAlarmMessageText_Title">Write a message for yourself</string>
    <string name="MMA_alertDialogAlarmMessageText_PositiveButtonText">Ok</string>
    <string name="MMA_alertDialogAlarmMusic_Title">Choose music for Alarm</string>
    <string name="MMA_alertDialogAlarmMusic_PositiveButton">Good</string>
    <string name="MMA_alertDialogAlarmDeepSleepMusic_Title">Choose music for Alarm</string>
    <string name="MMA_alertDialogAlarmDeepSleepMusic_PositiveButton">Good</string>
    <string name="MAP_Toast_timeLeftToAlarmStart">Until boom h. <xliff:g id="timeToAlarmStartToast">%s</xliff:g> min.</string>
    <string name="create">Create</string>
    <string name="good_morning">Good Morning</string>
    <string name="main_button_time_default" translatable="false">20 : 35</string>
    <string name="Tuesday">TUE</string>
    <string name="yes">yes</string>
    <string name="letsDoIt">Let\'s do it</string>
    <string name="back">Back</string>
    <string name="close">Close</string>

    <string name="helpingMessageOne">Every next time you will see \nyour last set alarm there.</string>
    <string name="helpingMessageTwo">So to set alarm in the future (with old \nsettings) just click the  circle button.</string>
    <string name="helperFirstDialogMessage">Hi if you want to see how the Alarm work just follow appearing text and touch them to continue</string>
    <string name="helperFirstDialogTitle">Smart helper :)</string>

    <string name="timeUntilAlarmBoom">You will sleep only : <xliff:g id="hoursUntilAlarmBoom">%d</xliff:g> hours <xliff:g id="minutesUntilAlarmBoom">%d</xliff:g> minutes</string>
    <string name="blockedButtonMessage">Hi, this option is last one :(, please try moving other direction.</string>
    <string name="helperHideDialogTitle">Do you want to continue without helping messages?</string>
    <string name="alarmTimeLimitationMessage">Remember, you can set alarm only for next 23 hours and 59 minutes :)</string>
    <string name="contentDescription_playRingtone">Play ringtone</string>
    <string name="contentDescription_pauseRingtone">Pause ringtone</string>
    <string name="hint_for_tvSetAlarmMessage">Type some message for future yourself here (will appear on alarm screen).</string>
    <string name="toast_message_was_saved">Message was successfully saved.</string>
    <string name="preview_dialog_boom_time">Boom time :</string>
    <string name="preview_dialog_ringtone">Ringtone :</string>
    <string name="preview_dialog_message">Message :</string>
    <string name="deepSleepOptionTitle">Deep sleep wake up</string>
    <string name="deepSleepOptionDescription">DeepWakeUp option gives you a way to wake up calmly as it was in natural way.
         It just plays some calm music in the background and slowly increase it is volume until you will wake up.</string>
    <string name="contentDescriptionSleepIcon">sleep zzz icon</string>
    <string name="preview_dialog_deep_wake_up">Deep wake up :</string>
    <string name="true_text">true</string>
    <string name="false_text">false</string>
    <string name="deepWakeUpSwitchText">Do you want to try? </string>
    <string name="tasksExplanationText">Move all circles one by one from lowest number to next highest number.</string>
    <string name="settings">settings</string>
</resources>
