<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ibSleepIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@color/customTransparentColor"
        android:contentDescription="@string/contentDescriptionSleepIcon"
        app:srcCompat="@drawable/zzz_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:text="@string/deepSleepOptionTitle"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ibSleepIcon"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="#32bdbdbd"
        android:padding="10dp"
        android:text="@string/deepSleepOptionDescription"
        android:textStyle="italic" />

    <Switch
        android:id="@+id/swDeepWakeUpOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/vDividingLine"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/deepWakeUpSwitchText"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:theme="@style/switchColorsTheme" />

    <View
        android:id="@+id/vDividingLine"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_above="@id/layoutDeepWakeUpPlayer"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="#32bdbdbd" />

    <include
        android:id="@+id/layoutDeepWakeUpPlayer"
        layout="@layout/ringtone_list_row_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />


</RelativeLayout>